Support for pvr.iptvarchive
add support for pvr.iptvarchive for coreelec

--- a/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.en_gb/strings.po
+++ b/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.en_gb/strings.po
@@ -231,3 +231,7 @@ msgstr "Could not download recording"
 msgctxt "#30068"
 msgid "Error parsing dates"
 msgstr "Error parsing dates"
+
+msgctxt "#30069"
+msgid "PVR IPTV Archive Client"
+msgstr "PVR IPTV Archive Client"
