--- a/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.pl_pl/strings.po
+++ b/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.pl_pl/strings.po
@@ -231,3 +231,7 @@ msgstr "Pobieranie z archiwum nieudane"
 msgctxt "#30068"
 msgid "Error parsing dates"
 msgstr "Błąd przetwarzania daty"
+
+msgctxt "#30069"
+msgid "PVR IPTV Archive Client"
+msgstr "PVR IPTV Archive Client"
