Add archive format support

--- a/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.pl_pl/strings.po
+++ b/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.pl_pl/strings.po
@@ -235,3 +235,7 @@ msgstr "Błąd przetwarzania daty"
 msgctxt "#30069"
 msgid "PVR IPTV Archive Client"
 msgstr "PVR IPTV Archive Client"
+
+msgctxt "#30070"
+msgid "Archive format"
+msgid "Format archiwum"
