--- a/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.en_gb/strings.po
+++ b/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.en_gb/strings.po
@@ -235,3 +235,7 @@ msgstr "Error parsing dates"
 msgctxt "#30069"
 msgid "PVR IPTV Archive Client"
 msgstr "PVR IPTV Archive Client"
+
+msgctxt "#30070"
+msgid "Archive format"
+msgid "Archive format"
