--- a/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.pl_pl/strings.po
+++ b/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.pl_pl/strings.po
@@ -238,4 +238,8 @@ msgstr "PVR IPTV Archive Client"
 
 msgctxt "#30070"
 msgid "Archive format"
-msgid "Format archiwum"
+msgstr "Format archiwum"
+
+msgctxt "#30071"
+msgid "Custom"
+msgstr "Inny"
