--- a/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.pl_pl/strings.po
+++ b/src/plugin.video.iptv.archive.recorder/resources/language/resource.language.pl_pl/strings.po
@@ -243,3 +243,15 @@ msgstr "Format archiwum"
 msgctxt "#30071"
 msgid "Custom"
 msgstr "Inny"
+
+msgctxt "#30072"
+msgid "TeleEleVidenie"
+msgstr "TeleEleVidenie"
+
+msgctxt "#30073"
+msgid "PlusX.tv"
+msgstr "PlusX.tv"
+
+msgctxt "#30074"
+msgid "Create subfolder for each channel"
+msgstr "Utwórz folder dla każdego kanału"
