--- a/src/plugin.video.iptv.archive.downloader/resources/language/resource.language.pl_pl/strings.po
+++ b/src/plugin.video.iptv.archive.downloader/resources/language/resource.language.pl_pl/strings.po
@@ -238,4 +238,20 @@ msgstr "PVR IPTV Archive Client"
 
 msgctxt "#30070"
 msgid "Archive format"
-msgid "Format archiwum"
+msgstr "Format archiwum"
+
+msgctxt "#30071"
+msgid "Custom"
+msgstr "Inny"
+
+msgctxt "#30072"
+msgid "TeleEleVidenie"
+msgstr "TeleEleVidenie"
+
+msgctxt "#30073"
+msgid "PlusX.tv"
+msgstr "PlusX.tv"
+
+msgctxt "#30074"
+msgid "Create subfolder for each channel"
+msgstr "Utwórz folder dla każdego kanału"
