--- a/src/plugin.video.iptv.archive.downloader/resources/language/resource.language.pl_pl/strings.po
+++ b/src/plugin.video.iptv.archive.downloader/resources/language/resource.language.pl_pl/strings.po
@@ -255,3 +255,19 @@ msgstr "PlusX.tv"
 msgctxt "#30074"
 msgid "Create subfolder for each channel"
 msgstr "Utwórz folder dla każdego kanału"
+
+msgctxt "#30075"
+msgid "Delete scheduled download?"
+msgstr "Usunąć z kolejki pobierania?"
+
+msgctxt "#30076"
+msgid "Recording queue"
+msgstr "Kolejka pobierania"
+
+msgctxt "#30077"
+msgid "Delete?"
+msgstr "Usuń?"
+
+msgctxt "#30078"
+msgid "Delete all queued downloads?"
+msgstr "Usunąć wszystkie zakolejkowane pobrania?"
