Make queue better

--- a/src/plugin.video.iptv.archive.downloader/resources/language/resource.language.pl_pl/strings.po
+++ b/src/plugin.video.iptv.archive.downloader/resources/language/resource.language.pl_pl/strings.po
@@ -271,3 +271,11 @@ msgstr "Usuń?"
 msgctxt "#30078"
 msgid "Delete all queued downloads?"
 msgstr "Usunąć wszystkie zakolejkowane pobrania?"
+
+msgctxt "#30079"
+msgid "Scheduling"
+msgstr "Kolejkowanie"
+
+msgctxt "#30080"
+msgid "Found unfinished downloads. Would you like to restart?"
+msgstr "Znalezione niedokończone pobrania. Kontynuować?"
