--- a/src/plugin.video.iptv.archive.downloader/resources/language/resource.language.en_gb/strings.po
+++ b/src/plugin.video.iptv.archive.downloader/resources/language/resource.language.en_gb/strings.po
@@ -271,3 +271,11 @@ msgstr "Delete"
 msgctxt "#30078"
 msgid "Delete all queued downloads?"
 msgstr "Delete all queued downloads?"
+
+msgctxt "#30079"
+msgid "Scheduling"
+msgstr "Scheduling"
+
+msgctxt "#30080"
+msgid "Found unfinished downloads. Would you like to restart?"
+msgstr "Znalezione niedokończone pobrania. Kontynuować?"
